PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: On new installs set 3.00% as deviation for increasing dynamic run count rather than 3.50%
pts-core: Add FORCE_MIN_TIMES_TO_RUN_CUTOFF= environment variable to toggle cutoff for FORCE_MIN_TIMES_TO_RUN behavior
pts-core: Add FORCE_TIMES_TO_RUN_MULTIPLE
pts-core: Add strict-benchmark option for enabling various options to ensure stricter behavior about the number of times to run each benchmark
pts-core: Add cpu-physical-threads / cpu-threads / auto-executable auto test run options
phodevi: CPU-therm reporting via sysfs for CPU core temp
phodevi: GPU-therm reporting via sysfs for GPU core temp

Phoronix Test Suite 8.8.0 Milestone 1
16 March 2019

pts-core: Allow FORCE_TIMES_TO_RUN to override debug-run/debug-benchmark single run behavior
pts-core: Various fallbacks/workarounds for those wanting to (unofficially) use PTS on Windows 8.1
pts-core: Other small tweaks and optimizations
pts-core: Fixes an odd scenario where on Windows after 2 runs, further runs of that test profile for current run could fail in select (random) instances
pts-core: Write out system notes for each system when generating PDF result output
pts-core: CSV output improvements
pts-core: Add result-file-raw-to-csv for dumping the raw/individual benchmark result run data
pts_Graph: Condensing improvements for large graphs
pts_Graph: Various formatting improvements
phodevi: Intel GPU reporting improvements
phodevi: BIOS version reporting support extended to Windows
phodevi: ipmitool DMCI power sensor reporting for at least some POWER servers

Phoronix Test Suite 8.6.1-Spydeberg
21 February 2019

pts-core: Dynamically honoring the CLI terminal width (no longer cache the value on Linux/BSD/macOS)
pts-core: BSD external dependency updates
ob_auto_compare: Minor formatting updates

Phoronix Test Suite 8.6.0-Spydeberg
5 February 2019

pts-core: Other small tweaks and fixes